refactor: Extracted list of countryChatsData to CountryChatsDataList.